@@ -24,7 +24,9 @@
 #include <injeqt/injeqt.h>
 
 class FileTransferManager;
+class InjectedFactory;
 class MainWindowRepository;
+class StatusContainerManager;
 
 class WindowsIntegration : public QObject
 {
@@ -36,11 +38,15 @@ public:
 
 private:
 	QPointer<FileTransferManager> m_fileTransferManager;
+	QPointer<InjectedFactory> m_injectedFactory;
 	QPointer<MainWindowRepository> m_mainWindowRepository;
+	QPointer<StatusContainerManager> m_statusContainerManager;
 
 private slots:
 	INJEQT_SET void setFileTransferManager(FileTransferManager *fileTransferManager);
+	INJEQT_SET void setInjectedFactory(InjectedFactory *injectedFactory);
 	INJEQT_SET void setMainWindowRepository(MainWindowRepository *mainWindowRepository);
+	INJEQT_SET void setStatusContainerManager(StatusContainerManager *statusContainerManager);
 	INJEQT_INIT void init();
 
 	void mainWindowAdded(QWidget *mainWindow);
